message：code commit

--- a/IDCardClieck/IDCardClieck/IDCardClieck.csproj
+++ b/IDCardClieck/IDCardClieck/IDCardClieck.csproj
@@ -179,6 +179,12 @@
     <Compile Include="Controls\UC\UCTestGridTable_CustomCellA.Designer.cs">
       <DependentUpon>UCTestGridTable_CustomCellA.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\UC\UCTestGridTable_CustomCellB.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UC\UCTestGridTable_CustomCellB.Designer.cs">
+      <DependentUpon>UCTestGridTable_CustomCellB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\UC\UCTestGridTable_CustomCellIcon.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -258,6 +264,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC\UCTestGridTable_CustomCellA.resx">
       <DependentUpon>UCTestGridTable_CustomCellA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UC\UCTestGridTable_CustomCellB.resx">
+      <DependentUpon>UCTestGridTable_CustomCellB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HistoryForm.resx">
       <DependentUpon>HistoryForm.cs</DependentUpon>
