message:code commit

--- a/IDCardClieck/IDCardClieck/App.config
+++ b/IDCardClieck/IDCardClieck/App.config
@@ -16,9 +16,9 @@
   <params>
     <request>
       <!--服务器-->
-      <add key="url" value="http://106.12.252.101:8080"></add> 
+      <!--<add key="url" value="http://106.12.252.101:8080"></add>--> 
       <!--测试-->
-      <!--<add key="url" value="http://26526tu163.zicp.vip/"></add>-->
+      <add key="url" value="http://26526tu163.zicp.vip/"></add>
       <add key="uservalue" value="admin"></add>
       <add key="pwdvalue" value="123456"></add>
       <add key=" " value="true"></add>
